# conrad

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml  runtime.txt  sitemap.xml
docs/: complex-output.ipynb  index.md  motivation.md  regulation.md
