[tool.poetry]
name = "conrad"
version = "0.1.0"
description = ""
authors = ["Brett Calcott <brett.calcott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
