[tool.poetry]
name = "conrad"
version = "0.1.0"
description = ""
authors = ["Brett Calcott <brett.calcott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pheasant = {path = "../../Code/pheasant", develop=true}

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
jupyterlab = "^3.0.0"
mkdocs-material = "^7.1.9"
mkdocs-jupyter = "^0.17.3"
jupytext = "^1.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
